--- a/week5/trainingpage.html
+++ b/week5/trainingpage.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/assets/normalize.css">
-    <link rel="stylesheet" href="/assets/stylesforpage.css">
+    <link rel="stylesheet" href="assets/normalize.css">
+    <link rel="stylesheet" href="assets/stylesforpage.css">
 
 </head>
 
@@ -18,8 +18,8 @@
 
             <section class="upper">Основная часть</section>
             <section class="downer">
-                <article class="up1">Ещё 1</article>
-                <article class="up2">Ещё 2</article>
+                <article class="up">Ещё 1</article>
+                <article class="up">Ещё 2</article>
                 <article class="down">Ещё 3</article>
             </section>
 
