--- a/week5/Flexmultitech.html
+++ b/week5/Flexmultitech.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MultiTech</title>
-    <link rel="stylesheet" href="/assets/normalize.css">
-    <link rel="stylesheet" href="/assets/multitechfonts.css">
-    <link rel="stylesheet" href="/assets/flexstylesmultitech.css">
+    <link rel="stylesheet" href="assets/normalize.css">
+    <link rel="stylesheet" href="assets/multitechfonts.css">
+    <link rel="stylesheet" href="assets/flexstylesmultitech.css">
 
 </head>
 
