--- a/week7/trainingpageadapt.html
+++ b/week7/trainingpageadapt.html
@@ -96,7 +96,7 @@
                 grid-template-rows: 20% 30% 15% 15% 20%;
                 text-align: center;
                 gap: 5px;
-                font-size: 2em;
+                font-size: 1.5em;
                 padding-top: 10px;
 
             }
@@ -140,7 +140,7 @@
             }
 
             header {
-                grid-row: 1/2;
+                grid-row: 1;
                 grid-column: 1/13;
                 background-color: grey;
 
@@ -148,20 +148,20 @@
 
             .aside {
                 grid-row: 2;
-                grid-column: 7/13;
+                grid-column: 1/13;
                 background-color: aqua;
                 height: 25vh;
             }
 
             .upper {
-                grid-row: 2;
-                grid-column: 1/7;
+                grid-row: 3;
+                grid-column: 1/13;
                 background-color: antiquewhite;
 
             }
 
             .up1 {
-                grid-row: 3;
+                grid-row: 4;
                 grid-column: 1/7;
                 background-color: antiquewhite;
 
@@ -169,7 +169,7 @@
 
 
             .up2 {
-                grid-row: 3;
+                grid-row: 4;
                 grid-column: 7/13;
                 background-color: antiquewhite;
 
@@ -177,29 +177,28 @@
 
 
             .down {
-                grid-row: 4;
+                grid-row: 5;
                 grid-column: 1/13;
                 background-color: antiquewhite;
 
             }
 
             .footer1 {
-                display: none;
+                grid-row: 7;
+
             }
 
             .footer2 {
-
-                display: none;
+                grid-row: 7;
             }
 
             .footer3 {
-
-                display: none;
+                grid-row: 7;
             }
 
             .footer4 {
+                grid-row: 7;
 
-                display: none;
             }
 
 
@@ -211,10 +210,10 @@
                 width: 100%;
                 height: 100%;
                 grid-template-columns: repeat(12, 1fr);
-                grid-template-rows: 25% 25% 25% 25%;
+                grid-template-rows: repeat(7, 1fr);
                 text-align: center;
                 gap: 5px;
-                font-size: 2em;
+                font-size: 1.5em;
 
             }
 
@@ -227,54 +226,60 @@
 
             .aside {
                 grid-row: 2;
-                grid-column: 7/13;
+                grid-column: 1/13;
                 background-color: aqua;
                 height: 25vh;
             }
 
             .upper {
-                grid-row: 2;
-                grid-column: 1/7;
+                grid-row: 3;
+                grid-column: 1/13;
                 background-color: antiquewhite;
 
             }
 
             .up1 {
-                grid-row: 3;
-                grid-column: 1/7;
+                grid-row: 4;
+                grid-column: 1/13;
                 background-color: antiquewhite;
 
             }
 
 
             .up2 {
-                grid-row: 3;
-                grid-column: 7/13;
+                grid-row: 5;
+                grid-column: 1/13;
                 background-color: antiquewhite;
 
             }
 
 
             .down {
-                grid-row: 4;
+                grid-row: 6;
                 grid-column: 1/13;
                 background-color: antiquewhite;
             }
 
+
+
+
             .footer1 {
-                display: none;
+                grid-row: 7;
+
+
             }
 
             .footer2 {
-                display: none;
+                grid-row: 7;
             }
 
             .footer3 {
-                display: none;
+                grid-row: 7;
             }
 
             .footer4 {
-                display: none;
+                grid-row: 7;
+
             }
 
         }
@@ -300,6 +305,7 @@
     <section class="footer2">Секция футера 2</section>
     <section class="footer3">Секция футера 3</section>
     <section class="footer4">Секция футера 4</section>
+
 
 
 
