--- a/week8/vrcover.html
+++ b/week8/vrcover.html
@@ -9,8 +9,18 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <style>
-        html {
-            height: 100%;
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto+Slab:wght@200&family=Roboto:ital,wght@0,100;1,400&display=swap');
+
+        @font-face {
+            font-family: 'intro';
+            src: url(assets/intro.woff2) format('woff2'),
+                url(assets/intro.woff) format('woff');
+            font-weight: normal;
+            font-style: normal;
+        }
+
+        body {
+            font-family: Roboto Slab, 'Montserrat', sans-serif;
         }
 
         .btn {
@@ -20,6 +30,8 @@
             color: white;
             font-size: larger;
             pointer-events: none;
+            font-family: intro, Roboto Slab, 'Montserrat', sans-serif;
+
 
 
         }
@@ -49,8 +61,6 @@
             background-size: vh 783px vw 725px;
 
 
-
-
         }
 
         .jumbotron {
@@ -62,6 +72,10 @@
 
         .nav-link {
             color: #5222D0;
+        }
+
+        h1 {
+            font-family: intro, Roboto Slab, 'Montserrat', sans-serif;
         }
     </style>
 </head>
@@ -102,7 +116,6 @@
             </li>
 
         </ul>
-
     </main>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
