--- a/week8/vrmain.html
+++ b/week8/vrmain.html
@@ -9,8 +9,26 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto+Slab:wght@200&family=Roboto:ital,wght@0,100;1,400&display=swap');
+
+        @font-face {
+            font-family: 'intro';
+            src: url(assets/intro.woff2) format('woff2'),
+                url(assets/intro.woff) format('woff');
+            font-weight: normal;
+            font-style: normal;
+        }
+
         html {
             height: 100%;
+        }
+
+        h1 {
+            font-family: intro, Roboto Slab, 'Montserrat', sans-serif;
+        }
+
+        body {
+            font-family: Roboto Slab, 'Montserrat', sans-serif;
         }
 
         .btn {
@@ -20,6 +38,7 @@
             color: white;
             font-size: larger;
             pointer-events: none;
+            font-family: intro, Roboto Slab, 'Montserrat', sans-serif;
 
         }
 
@@ -58,6 +77,7 @@
         </div>
     </header>
     <main class="container">
+        <h1>ВОЗМОЖНОСТИ</h1>
 
 
         <div class="row">
@@ -143,7 +163,7 @@
                     <a class="nav-link" href="#">Где купить</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link href=" #">Доставка</a>
+                    <a class="nav-link" href="#">Доставка</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Помощь</a>
