--- a/project-3-test/startico2.html
+++ b/project-3-test/startico2.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Startico</title>
     <link rel="stylesheet" href="assets/styles/normalize.css">
+    <link rel="stylesheet" href="assets/styles/fonts.css">
     <link rel="stylesheet" href="assets/styles/startico2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,11 +39,36 @@
                 <a href="#" class="header__container__item btn btn-black">Try for free</a>
             </div>
         </header>
+        <div class="heading">
+            <div class="heading-content">
+                <h1 class="heading-content__header">Head start your business today!</h1>
 
+                <p>Consectetur adipiscing elit. Integer sagittis quam magna, quis sollicitudin lorem ornare ut. Nulla et
+                    scelerisque mauris.</p>
+
+                <div class="heading-content__actions">
+                    <a class="btn btn-pistachio" href="#">Get started</a>
+                    <a class="btn btn-arrow" href="#">Try for free</a>
+                </div>
+
+                <div class="heading-content__logo">
+                    <img class="heading-content__logo-item" src="./assets/heading-logo-1.svg">
+                    <img class="heading-content__logo-item" src="./assets/heading-logo-2.svg">
+                    <img class="heading-content__logo-item" src="./assets/heading-logo-3.svg">
+                    <img class="heading-content__logo-item" src="./assets/heading-logo-4.svg">
+                </div>
+
+            </div>
+        </div>
     </div>
 
-    <div class="halfscreen page2">
-
+    <div class="video">
+        <div class="video-pane"></div>
+        <div class="video-handler">
+            <div class="video-background">
+                <a class="video-button btn btn-pistachio" href="#">Push me!</a>
+            </div>
+        </div>
     </div>
 
 </body>
