--- a/project-3-test/startico2.html
+++ b/project-3-test/startico2.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/styles/normalize.css">
     <link rel="stylesheet" href="assets/styles/fonts.css">
     <link rel="stylesheet" href="assets/styles/startico2.css">
+    <link rel="stylesheet" href="assets/styles/blog.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -66,10 +67,105 @@
         <div class="video-pane"></div>
         <div class="video-handler">
             <div class="video-background">
-                <a class="video-button btn btn-pistachio" href="#">Push me!</a>
+                <a class="video-button btn btn-pistachio" href="#">Watch Introduction</a>
             </div>
         </div>
     </div>
+
+
+
+
+
+
+
+
+
+    <div class="container__blog">
+        <div class="button__blog">
+            Blog
+        </div>
+        <div class="title__title">
+            Our latest blogs
+        </div>
+        <div class="title__text">
+            Accumsan semper euismod dolor vitae metus.
+        </div>
+        <div class="block">
+            <div class="block__card__1">
+                <img src="./assets/IMAGE.png" width="403" alt="Top 10 mistakes" title="Top 10 mistakes">
+                <div class="bt">
+                    <div class="button__card">
+                        Business
+                    </div>
+                    7 min read
+                </div>
+                <div class="card__title">
+                    Top 10 mistakes startaps in 2022 make and how to avoid them
+                </div>
+                <div class="card__text">
+                    Ipsum nostrum nihil. Veniam sit eius sed non accusamus ut officiis.
+                    Eligendi impedit rerum et beatae itaque corrupti.
+                    Sed nesciunt delectus sequi harum d
+                </div>
+                <div class="readmore_style">
+                    <img src="./assets/IMAGE-4.png" alt="Arrow" title="">
+                    <a class="link__nounderline" href="">
+                        Read more
+                    </a>
+                </div>
+            </div>
+            <div class="block__card__2">
+                <img src="./assets/IMAGE-2.png" width="403" alt="New hire interview" title="New hire interview">
+                <div class="bt">
+                    <div class="button__card">
+                        Business
+                    </div>
+                    11 min read
+                </div>
+                <div class="card__title">
+                    How many participants for a new hire interview
+                </div>
+                <div class="card__text">
+                    Et ad placeat quo rerum earum. Est est ea perspiciatis facere voluptas qui sit exercitationem
+                    autem. Qui maxime pariatur nobis est et culpa itaque consequatur.
+                </div>
+                <div class="readmore_style">
+                    <img src="./assets/IMAGE-4.png" alt="Arrow" title="">
+                    <a class="link__nounderline" href="">
+                        Read more
+                    </a>
+                </div>
+            </div>
+            <div class="block__card__3">
+                <img src="./assets/IMAGE-3.png" width="403" alt="New hire interview" title="New hire interview">
+                <div class="bt">
+                    <div class="button__card">
+                        Business
+                    </div>
+                    5 min read
+                </div>
+                <div class="card__title">
+                    Two business tools that have made my job way easier
+                </div>
+                <div class="card__text">
+                    Est est ea perspiciatis facere voluptas qui sit exercitationem autem.
+                    Et ad placeat quo rerum earum. Qui maxime pariatur nobis est et culpa itaque consequatur.
+                </div>
+                <div class="readmore_style">
+                    <img src="./assets/IMAGE-4.png" alt="Arrow" title="">
+                    <a class="link__nounderline" href="">
+                        Read more
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="button__view">
+            <a class="link__nounderline" href="">
+                View all
+            </a>
+        </div>
+    </div>
+
 
 </body>
 
