--- a/gymnastics/index.html
+++ b/gymnastics/index.html
@@ -67,6 +67,7 @@
                             ли вашему ребенку гимнастика, мы предлагаем пробное бесплатное занятие.</p>
                         <a href="contacts.html"><button class="fourwhom__button">ХОТИМ ПОПРОБОВАТЬ!</button></a>
                     </div>
+                    <img class="moveingball" src="assets/images/ellipse.svg">
                     <img class="fourwhom__picture" src="assets/images/girl.png">
 
                 </div>
