--- a/gymnastics/stock.html
+++ b/gymnastics/stock.html
@@ -71,12 +71,14 @@
                     </div>
 
                 </div>
+                <img class="moveingball" src="assets/images/ellipse.svg">
                 <div class="stock__container_form">
                     <p>Записаться на <span class="violet">пробное занятие</span></p>
                     <a href="contacts.html"><button class="prices__card_button">ЗАПИСАТЬСЯ</button></a>
                 </div>
             </div>
         </div>
+
     </main>
     <footer>
         <div class="footer__container">
