--- a/scratch/index.html
+++ b/scratch/index.html
@@ -12,6 +12,7 @@
 <body>
 
     <div class="container">
+        <div id="thanksdiv"></div>
         <img class="ass" src="assets/images/guzica.jpg">
 
         <img class="hand" class="animated" id="hand" src="assets/images/hand4.png">
@@ -24,13 +25,27 @@
             hand.classList.add('animated1');
         })
         scratchbtn.onclick = function () {
-            hand.classList.remove('animated2');
-            hand1.classList.remove('animated2');
-            setTimeout(() => {
-                hand.classList.add('animated2');
-                hand1.classList.add('animated2');
-            }, 1)
+            try {
+                hand.classList.remove('animated2');
+                hand1.classList.remove('animated2');
+                setTimeout(() => {
+                    hand.classList.add('animated2');
+                    hand1.classList.add('animated2');
+                }, 1)
+            } finally {
+                let thanks = ['hvala', 'спасибо', 'thanks'];
+                let element = document.getElementById('thanksdiv');
 
+                for (let i = 0; i < thanks.length; i++) {
+                    setTimeout(() => {
+
+                        element.innerHTML = `<p>${thanks [i]}</p>`;
+
+                    }, (i + 1) * 1000)
+                }
+
+
+            }
         }
     </script>
 </body>
